# thirteenball

./: C11score.cxx  CMakeLists.txt  README.md  main.cpp  main_0001.cpp  main_0002.cpp  main_0003  main_prototype_v1_0  main_prototype_v1_1
gfx/: blank.txt
include/: except.hpp  game.hpp  load.hpp  struct.hpp
src/: blank.txt  game.cpp  load.cpp  main.cpp
